[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/crafting_ui.gd" id="1"]

[node name="CraftingUI" type="CanvasLayer"]
layer = 5
visible = false
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Crafting Table"
horizontal_alignment = 1

[node name="RecipeScroll" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeList" type="VBoxContainer" parent="Panel/VBox/RecipeScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Close"
